@@ -1,3 +1,7 @@
+2001-01-17  Michael Meeks  <michael@helixcode.com>
+
+	* component.c (sample_client_site_new): upd.
+
 2000-12-11  Michael Meeks  <michael@helixcode.com>
 
 	* container.c (add_moniker_async): impl.
